--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,48 @@
+/* * {
+    text-align: center;
+} */
 
+#hero {
+    position: relative;
+    display: block;
+    text-align: center;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.wrapper {
+    height: 100vh;
+}
+
+#about {
+    position: relative;
+    background: #eee;
+}
+
+#about-content {
+    padding: 50% 50% 0 10%;
+}
+
+#projects-content {
+    position: relative;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 0 20% 0 20%
+}
+
+#research {
+    background: #eee;
+}
+
+#research-content {
+    padding: 50% 10% 0 50%;
+    text-align: right;
+}
+
+#footer-wrapper {
+    height: 30vh;
+    background: #eee;
+}
